# dummy_tox

./: .gitignore  output.txt  setup.cfg
dummy/: __init__.py
tests/: test_module.py
