[metadata]
name = dummy

[options]
packages = dummy
python_requires = >= 3.6.0

[options.extras_require]
testing =
    coverage
    pytest

[coverage:run]
omit = tests/
branch = true

[coverage:report]
show_missing = true

[tool:pytest]
testpaths = tests/

[tox]
envlist =
    py36, py3-cover, coverage

[testenv]
basepython =
    py3: python3.6
    py36: python3.6
commands =
    pip install -q dummy[testing]
    pytest

[testenv:py3-cover]
commands =
    pip install -q dummy[testing]
    coverage run --source=dummy {envbindir}/pytest
    coverage xml -o coverage-py3.xml
setenv =
    COVERAGE_FILE=.coverage.py3

[testenv:coverage]
skip_install = True
basepython = python3.6
commands =
    coverage erase
    coverage combine
    coverage xml
    coverage report --show-missing --fail-under=100
deps =
    coverage
setenv =
    COVERAGE_FILE=.coverage
